--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -4,6 +4,9 @@
       {% if site.avatar %}
         <a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.avatar }}" /></a>
       {% endif %} 
+      {% if site.weixin %}
+        <a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.weixin }}" /></a>
+      {% endif %} 
       <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
       <p class="site-description">{{ site.description }}</p>
     </div>
